Hopefully this prevents weird overflow on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -7,10 +7,6 @@ html {
     overscroll-behavior: none;
 }
 
-body {
-    max-height: 100vh;
-}
-
 /* Create a custom thinner scrollbar for webkit based browsers, so that it occupies less space */
 /* width */
 ::-webkit-scrollbar {
